# face_anonymizer

./: .coveragerc  .dockerignore  .gitignore  .spellignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.dev.txt  requirements.txt
app/: Dockerfile  requirements.txt
backend/: FileObjectResponse.py  clientFile.py  server.py  utils.py
backend/configs/: __init__.py  client_config.py
backend/src/: ExposeClientFile.py  OpenCVmiddleware.py  clientFile.py  utils.py
backend/src/compute/: FPN.py  centerface_onnx.py  centerface_pytorch.py  clientComputeWorker.py  frameLabeler.py  opencv_worker.py  videoReader.py  worker_server.py
backend/test/: test_videoReader.py
backend/tests/: conftest.py  test_clientComputeWorker.py  test_frameLabeler.py  test_server.py  test_videoReader.py
compute_backend/: FPN.py  opencv_worker.py  worker_server.py
face_anonymizer/: server.py
face_anonymizer/src/: utils.py
face_anonymizer/src/compute/: centerface_onnx.py  clientComputeWorker.py  frameLabeler.py  videoReader.py
face_anonymizer/tests/: conftest.py  dummyWebsocketClient.py  test_clientComputeWorker.py  test_frameLabeler.py  test_server.py  test_videoReader.py
frontend/: index.html  index2.html  index_old.html  main.js
frontend/assets/css/: main.css
frontend/media/: face_anonymizer_speedrun.webm
